# speek-to-text-server

./: .gitignore  Dockerfile  README.md  devbox.json  flake.nix  main.py  pyproject.toml  requirements.txt  test.http
.github/workflows/: docker-publish.yml
